--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   padding-bottom: 15px;
   padding-right: 10px;
   padding-left: 10px;
-  width: 600px;
+  width: 800px;
 }
 
 /* id selector */
@@ -77,7 +77,8 @@ figure > figcaption {
   margin-left: 3em;
   margin-right: 3em;
   font-size: 4ex;
-  color: #6e8099;
+  /* color: #6e8099; */
+  color: green;
 }
 
 /* general sibling combinator */
