--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   padding-bottom: 15px;
   padding-right: 10px;
   padding-left: 10px;
-  width: 800px;
+  width: 500px;
 }
 
 /* id selector */
@@ -72,13 +72,12 @@ ol li {
 /* long margin */
 /* relative unit em and ex */
 figure > figcaption {
-  margin-top: 2em;
-  margin-bottom: 2em;
+  margin-top: 1em;
+  margin-bottom: 1em;
   margin-left: 3em;
   margin-right: 3em;
   font-size: 4ex;
-  /* color: #6e8099; */
-  color: green;
+  color: #6e8099;
 }
 
 /* general sibling combinator */
