--- a/style.css
+++ b/style.css
@@ -158,6 +158,8 @@ table {
     "map map photo1"
     "map map photo2";
   background-color: #2196F3;
+  width: 225px;
+  height: 225px;
 }
 
 .grid1 {
