--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ table {
     "words words ."
     "map map photo1"
     "map map photo2";
-  background-color: #2196F3;
+  background-color: green;
   width: 225px;
   height: 225px;
 }
