--- a/style.css
+++ b/style.css
@@ -163,25 +163,37 @@ table {
 .grid1 {
   grid-area: words;
   place-self: center;
+  object-fit: cover;
+  width: 100%;
+  max-height: 100%;
 }
 
 .grid2 {
   grid-area: map;
   place-self: center;
+  object-fit: cover;
+  width: 100%;
+  max-height: 100%;
 }
 
 .grid3 {
   grid-area: photo1;
   place-self: center;
+  object-fit: cover;
+  width: 100%;
+  max-height: 100%;
 }
 
 .grid4 {
   grid-area: photo2;
   place-self: center;
+  object-fit: cover;
+  width: 100%;
+  max-height: 100%;
 }
 
 /* media query */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
   body {
     background-color: #FFF0F5;
   }
