--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 /* padding long */
 /* width */
 .travel-form {
-  background-color: #dcf1fc;
+  /* background-color: #dcf1fc;  */
+  background-color: green;
   border-style: dashed solid;
   border-color: #7faec7;
   border-width: medium;
