--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
 /* padding long */
 /* width */
 .travel-form {
-  /* background-color: #dcf1fc;  */
-  background-color: green;
+  background-color: #dcf1fc;
   border-style: dashed solid;
   border-color: #7faec7;
   border-width: medium;
@@ -158,43 +157,44 @@ table {
     "words words ."
     "map map photo1"
     "map map photo2";
-  background-color: blue;
+  grid-gap: 10px;
+  background-color: green;
 }
 
 .grid1 {
   grid-area: words;
-  place-self: center;
-  object-fit: cover;
   width: 100%;
-  max-height: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
 }
 
 .grid2 {
   grid-area: map;
-  place-self: center;
-  object-fit: cover;
   width: 100%;
-  max-height: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
 }
 
 .grid3 {
   grid-area: photo1;
-  place-self: center;
-  object-fit: cover;
   width: 100%;
-  max-height: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
 }
 
 .grid4 {
   grid-area: photo2;
-  place-self: center;
-  object-fit: cover;
   width: 100%;
-  max-height: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
 }
 
 /* media query */
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 800px) {
   body {
     background-color: #FFF0F5;
   }
