--- a/style.css
+++ b/style.css
@@ -158,44 +158,36 @@ table {
     "map map photo1"
     "map map photo2";
   grid-gap: 10px;
-  background-color: green;
+  background-color: red;
 }
 
 .grid1 {
   grid-area: words;
-  width: 100%;
-  height: 100%;
   display: block;
   object-fit: cover;
 }
 
 .grid2 {
   grid-area: map;
-  width: 100%;
-  height: 100%;
   display: block;
   object-fit: cover;
 }
 
 .grid3 {
   grid-area: photo1;
-  width: 100%;
-  height: 100%;
   display: block;
   object-fit: cover;
 }
 
 .grid4 {
   grid-area: photo2;
-  width: 100%;
-  height: 100%;
   display: block;
   object-fit: cover;
 }
 
 /* media query */
-@media only screen and (max-width: 800px) {
-  body {
+@media only screen and (max-width: 600px) {
+  * {
     background-color: #FFF0F5;
   }
 }
